Changes in reSID version 0.16
-----------------------------

An off-by-one error in the emulation of the ADSR delay bug has been
fixed in the fast version of the envelope clocking.

An initialization bug in the Filter class which caused floating point
exceptions on some platforms has been fixed.

By building shifted FIR tables with samples according to the sampling
frequency, the resampling code dramatically reduces the computational
effort in the filter convolutions, without any loss of accuracy. The
filter convolutions are now also vectorizable on current hardware. The
implementation builds on ideas by Laurent Ganier.

The resampling code has been split into two functions, one using
interpolation and a small set of shifted filter tables, and one using
direct lookup and a large set of shifted filter tables. The accuracy
is the same, the difference is that the direct lookup runs at almost
twice the speed at the cost of approximately 16MB more memory. It is
now possible to run high quality resampling in real time on quite
modest hardware, provided that a vectorizing compiler is used.


Changes in reSID version 0.15
-----------------------------

An error in the emulation of the ADSR delay bug has been fixed. When
emulation of the ADSR delay bug was introduced in reSID 0.2, the delay
was one cycle too long. One cycle was subtracted from the delay in
reSID 0.4, however unfortunately one rate counter period was added as
well, thus increasing the error. At the time there was no method to
fully synchronize the CPU with envelope 3, so the measurements relied
on averaging. Because of pipelining in the envelope logic the effects
of a write are delayed, and this caused the test code to miss the
target by exactly one rate counter period on a real SID. The current
test code does achieve full synchronization with envelope 3, so this
time the delay should be 100% correct. There are still side effects
caused by pipelining which are not implemented in reSID, however these